<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".CategoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        app:title="@string/chooseCategory"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBankCategory"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:layout_marginRight="5sp"
            android:hint="@string/bankCategory"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Surface"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/btnMailCategory"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:hint="@string/mailCategory"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Surface"
            android:textColorHint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSocialCategory"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:layout_marginRight="5sp"
            android:hint="@string/socialCategory"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Surface"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/btnMiscCategory"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_weight="1"
            android:layout_marginLeft="5sp"
            android:hint="@string/otherCategory"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Surface"
            android:textColorHint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/clearDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/clearAllPasswords"
            android:theme="@style/Theme.AppCompat.DayNight.Dialog.Alert" />

    </LinearLayout>

</LinearLayout>